syntax = "proto3";

package user;

option go_package = "./pkg/user/pb";


service UserService {
  rpc Profile(ProfileRequest) returns (ProfileResponse) {}
  rpc Get(GetUserRequest) returns (GetUserResponse) {}
  rpc Update(UpdateUserRequest) returns (UpdateUserResponse) {}
}

message GetProfile {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    int64 teamID = 6;
    string teamName = 7;
}

// Profile
message ProfileRequest {
    int64 id = 1;
}

message ProfileResponse {
    int32 status = 1;
    string error = 2;
    GetProfile data = 3;
}



// GetUser
message GetUser {
    int64 id = 1;
    string username = 2;
    string role = 3;
    string teamName = 4;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    int32 status = 1;
    string error = 2;
    GetUser data = 3;
}

// UpdateUser
message UpdateUserRequest {
    int64 userID = 1;
    string username  = 2;
    string password  = 3;
    string role = 4;
    int64 teamID = 5;
}

message UpdateUserResponse {
    int32 status = 1;
    string error = 2;
}

