syntax = "proto3";

package auth;

option go_package = "./auth/pb";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc IsAuthenticated(IsAuthenticatedRequest) returns (IsAuthenticatedResponse) {}
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// Register
message RegisterRequest {
    string email = 1;
    string password = 2;
    string username = 3;
}

message RegisterResponse {
    bool success = 1;
}

// Login
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string id = 1; //sessionID
    bool success = 2;
}

// Logout
message LogoutRequest {
    string sessionID = 1;
}

message LogoutResponse {
    bool success = 1;
}

// IsAuthenticated
message IsAuthenticatedRequest {
    string sessionID = 1;
}

message IsAuthenticatedResponse {
    int64 userID = 1;
    bool success = 2;
}

// Validate
message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    int32 status = 1;
    int64 userId = 3;
}
